--- a/public/app/core/components/search/search.html
+++ b/public/app/core/components/search/search.html
@@ -79,6 +79,11 @@
 			Create New
 		</a>
 
+    <a class="btn btn-inverse pull-left" ng-click="ctrl.showNewFolderModal()" ng-show="ctrl.contextSrv.isEditor" ng-click="ctrl.isOpen = false;">
+			<i class="fa fa-plus"></i>
+			Create New Folder
+		</a>
+
 		<a class="btn btn-inverse pull-left" href="dashboard/new/?editview=import" ng-show="ctrl.contextSrv.isEditor" ng-click="ctrl.isOpen = false;">
 			<i class="fa fa-upload"></i>
 			Import
